<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="at.sw2017.calculator.Calculator">

    <Button
        android:text="C"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/buttonClear"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        tools:ignore="HardcodedText" />

    <Button
        android:text="0"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/buttonClear"
        android:id="@+id/button0"
        android:layout_alignTop="@+id/buttonClear"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/button0"
        android:layout_toEndOf="@+id/button0"
        android:text="="
        tools:ignore="HardcodedText" />

    <Button
        android:text="7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/button7"
        android:layout_above="@+id/buttonClear"
        android:layout_alignParentStart="true"
        tools:ignore="HardcodedText" />

    <Button
        android:text="8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/button7"
        android:layout_toEndOf="@+id/button7"
        android:id="@+id/button8"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/button8"
        android:layout_toEndOf="@+id/button8"
        android:text="9"
        tools:ignore="HardcodedText" />

    <Button
        android:text="/"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/buttonDiv"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/buttonDiv"
        android:layout_alignParentEnd="true"
        android:text="*"
        tools:ignore="HardcodedText" />

    <Button
        android:text="4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/button4"
        android:layout_above="@+id/button7"
        android:layout_toStartOf="@+id/button8"
        tools:ignore="HardcodedText" />

    <Button
        android:text="5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/button4"
        android:layout_toEndOf="@+id/button4"
        android:id="@+id/button5"
        tools:ignore="HardcodedText" />

    <Button
        android:text="6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/button5"
        android:layout_toEndOf="@+id/button5"
        android:id="@+id/button6"
        tools:ignore="HardcodedText" />

    <Button
        android:text="-"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/button6"
        android:layout_alignParentEnd="true"
        android:id="@+id/buttonSub"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/button4"
        android:layout_alignParentStart="true"
        android:text="1"
        tools:ignore="HardcodedText" />

    <Button
        android:text="2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/button2"
        tools:ignore="HardcodedText"
        android:layout_above="@+id/button5"
        android:layout_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/button6"
        android:layout_toEndOf="@+id/button2"
        android:text="3"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/buttonSub"
        android:layout_alignParentEnd="true"
        android:text="+"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="0"
        android:textSize="78sp"
        tools:ignore="HardcodedText" />


</RelativeLayout>